# PaperHunterAgent

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  config_example.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  mvp_review_report.md
fixtures/: demo_papers.json
src/: __init__.py  cli.py  concept_map_agent.py  paper_hunter_agent.py  summarizer_agent.py
tests/: test_agents.py  test_cli.py
